--- a/MVC5Course/Views/Shared/Error.cshtml
+++ b/MVC5Course/Views/Shared/Error.cshtml
@@ -4,6 +4,6 @@
     ViewBag.Title = "錯誤";
 }
 
-<h1 class="text-danger">錯誤。</h1>
+<h1 class="text-danger">ErrorArgument 錯誤。</h1>
 <h2 class="text-danger">處理您的要求時發生錯誤。</h2>
 
