--- a/MVC5Course/Views/Shared/_Layout.cshtml
+++ b/MVC5Course/Views/Shared/_Layout.cshtml
@@ -26,6 +26,7 @@
                     <li>@Html.ActionLink("關於", "About", "Home")</li>
                     <li>@Html.ActionLink("連絡方式", "Contact", "Home")</li>
                     <li>@Html.ActionLink("Products", "Index", "Products")</li>
+                    <li>@Html.ActionLink("Batch", "Index", "Batch")</li>
 
                 </ul>
                 @Html.Partial("_LoginPartial")
